--- a/index.html
+++ b/index.html
@@ -10,45 +10,6 @@
 <body>
 	<header>
 		<div class="logo-nav-anchors">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-			<!-- <div class="nav-img">
-				<img src="Fonts/images/logo/Reservia@3x.png" alt="Logo Reservia" class="logo">
-			</div>
-				<nav>
-					<ul>
-						<div class="all-links">
-							<div class="nav-2-links">
-								<li class="hebergement">
-									<a href="#hebergements" class="hebergement-a">Hébergements</a>
-								</li>
-								<li class="activites">
-									<a href="#Activités" class="activites-a">Activités</a>
-								</li>
-							</div>
-							<div class="nav-1-link">
-								<li class="s-inscrire">
-									<a href="#"><strong>S'inscrire</strong></a>
-								</li>
-							</div>
-						</div>
-					</ul>
-				</nav> -->
-
-
-
 			<div class="nav-img">
 				<img src="Fonts/images/logo/Reservia@3x.png" alt="Logo Reservia" class="logo">
 			</div>
@@ -64,37 +25,12 @@
 					</div>
 					<div class="nav-1-link">
 						<li class="s-inscrire">
-							<a href="#"><strong>S'inscrire</strong></a>
+							<a href="##"><strong>S'inscrire</strong></a>
 						</li>
 					</div>
 				</div>
 			</nav>
-
-
-
-
-
 		</div>
-		
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 		<div class="text-search-bar-filters">
 			<div class="text-search-bar">
@@ -102,9 +38,8 @@
 				<span>En plein centre ville ou en pleine nature</span></p>
 			</div>
 
-			<p class="text-search-bar-initial"><strong>Trouver votre hébergement<br> pour des vacances de rêve</strong><br>
-			<span>En plein centre ville ou en pleine nature</span></p>
-
+			<p class="text-search-bar-initial"><strong>Trouver votre hébergement pour des vacances de rêve</strong><br>
+			<span>En plein centre ville ou en pleine nature</span></p> <!--br enlevé-->
 
 			<div class="search-bar">
 				<form>
