Changements mineurs Bis

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</div>
 
 			<p class="text-search-bar-initial"><strong>Trouver votre hébergement pour des vacances de rêve</strong><br>
-			<span>En plein centre ville ou en pleine nature</span></p> <!--br enlevé-->
+			<span>En plein centre ville ou en pleine nature</span></p>
 
 			<div class="search-bar">
 				<form>
